--- a/app/assets/stylesheets/pokemons.scss
+++ b/app/assets/stylesheets/pokemons.scss
@@ -7,10 +7,32 @@
   //background-color: white;
 //}
 
+.card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+//  background-color: red;
+//  padding-left: 50px;
+  justify-content: space-between;
+  font-family: 'Share Tech Mono', monospace;
+  font-size: 30px;
+  font-color: red;
+}
+
+.block {
+  display: flex;
+  flex-direction: column;
+}
+//body {
+//  display: flex;
+//  justify-content: space-between;
+//  flex-wrap: wrap;
+//}
+
 body::after {
   content: "";
-  background-image: url('/bg_sprites.png');
-  opacity: 0.4;
+  background-image: url('/bg_collage.jpg');
+  opacity: 0.3;
   top: 0;
   left: 0;
   bottom: 0;
@@ -19,8 +41,17 @@ body::after {
   z-index: -1;
 }
 
+.title {
+  line-height: 60px;
+  text-align: center;
+}
+
+
 h1 {
+  display:inline-block;
   color: darkblue;
+  margin: 10px;
+  font-size: 60px;
   font-family: 'Share Tech Mono', monospace;
 }
 
@@ -31,8 +62,9 @@ h3 {
 
 p {
   color: black;
-  font-size: 15px;
-  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+//  font-family: 'Share Tech Mono', monospace;
+  font-family: 'Helvetica', sans-serif;
 }
 
 a:link, a:active, a,:visited {
