--- a/app/views/pokemons/_form.html.erb
+++ b/app/views/pokemons/_form.html.erb
@@ -13,7 +13,7 @@
   <%= f.text_field :pokemontype %>
 
   <%= f.label :region %>
-  <%= f.collection_select(:region_id, Region.all, :id, :name) %>
+  <%= f.text_field :region %>
 
   <%= f.label :physiology %>
   <%= f.text_field :physiology %>
