--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -5,7 +5,7 @@
   <p><%= @pokemon.pokemontype %><p>
 
 <h3><%= "Region: " %><h3>
-  <p><%= @pokemon.region.name %></p>
+  <p><%= @pokemon.region %></p>
 
 <h3><%= "Physiology: " %><h3>
   <p><%= @pokemon.physiology %></p>
