--- a/app/views/pokemons/edit.html.erb
+++ b/app/views/pokemons/edit.html.erb
@@ -1,3 +1,7 @@
 <h1>Edit Pokemon</h1>
 
 <%= render "form" %>
+
+<hr>
+
+<%= link_to "[All Pokemons]", root_path %> <%= link_to "[Regions]", regions_path %>
